--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "test": "grunt test"
   },
   "dependencies" : {
-    "jsdom": "~0.3.4",
-    "grunt-lib-contrib": "~0.3.0"
+    "jsdom": "~0.5.6",
+    "grunt-lib-contrib": "~0.6.1"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.1.1rc5",
-    "grunt-contrib-clean": "~0.4.0rc5",
-    "grunt-contrib-nodeunit": "~0.1.2rc5",
-    "grunt": "~0.4.0rc5"
+    "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-nodeunit": "~0.1.2",
+    "grunt": "~0.4.1"
+  },
+  "peerDependencies": {
+    "grunt": "~0.4.1"
   },
   "keywords": [
     "gruntplugin"
