--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "scripts": {
     "test": "grunt test"
   },
-  "dependencies" : {
-    "jsdom": "~0.5.6"
+  "dependencies": {
+    "cheerio": "~0.10.8"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.4.3",
