--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "cheerio": "~0.10.8"
+    "cheerio": "~0.10.8",
+    "uglifyjs": "~2.3.6"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.4.3",
