--- a/package.json
+++ b/package.json
@@ -33,13 +33,10 @@
     "uglify-js": "~2.3.6"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.4.3",
+    "grunt": "^1.0.2",
     "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-nodeunit": "~0.1.2",
-    "grunt": "~0.4.1"
-  },
-  "peerDependencies": {
-    "grunt": "~0.4.1"
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-nodeunit": "^1.0.0"
   },
   "keywords": [
     "gruntplugin",
