--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "cheerio": "~0.10.8"
+    "cheerio": "~0.10.8",
+    "uglify-js": "^3.3.16"
   },
   "devDependencies": {
     "grunt": "^1.0.2",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-nodeunit": "^1.0.0",
-    "uglify-js": "^3.3.16"
+    "grunt-contrib-nodeunit": "^1.0.0"
   },
   "keywords": [
     "gruntplugin",
