--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "grunt": "^1.0.4",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-nodeunit": "^2.0.0"
+    "grunt-run": "^0.8.1"
   },
   "keywords": [
     "gruntplugin",
