--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   "devDependencies": {
     "grunt": "^1.0.4",
     "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-run": "^0.8.1"
+    "grunt-run": "^0.8.1",
+    "semistandard": "^13.0.1"
   },
   "keywords": [
     "gruntplugin",
