--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "uglify-js": "^3.3.16"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "grunt": "^1.1.0",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-run": "^0.8.1",
+    "semantic-release": "^17.2.1",
     "semistandard": "^14.2.0"
   },
   "keywords": [
@@ -43,5 +46,28 @@
     "embed",
     "stylesheet",
     "javascript"
-  ]
+  ],
+  "release": {
+    "plugins": [
+        "@semantic-release/commit-analyzer",
+        "@semantic-release/release-notes-generator",
+        [
+            "@semantic-release/changelog",
+            {
+                "changelogFile": "CHANGELOG.md"
+            }
+        ],
+        "@semantic-release/npm",
+        [
+            "@semantic-release/git",
+            {
+                "assets": [
+                    "CHANGELOG.md",
+                    "package.json"
+                ],
+                "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+            }
+        ]
+    ]
+  }
 }
