--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/Trott/grunt-html-smoosher/blob/master/LICENSE-MIT"
+      "url": "https://github.com/Trott/grunt-html-smoosher/blob/main/LICENSE-MIT"
     }
   ],
   "main": "Gruntfile.js",
@@ -48,6 +48,9 @@
     "javascript"
   ],
   "release": {
+    "branches": [
+      "main"
+    ],
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
